@@ -6,13 +6,15 @@ using namespace Pds::ControlData;
 
 PVControl::PVControl() {}
 
-PVControl::PVControl(const char* pvname, double setValue) :
+PVControl::PVControl(const char* pvname, unsigned index, double setValue) :
+  _index(index   ),
   _value(setValue)
 {
   strncpy(_name, pvname, NameSize);
 }
 
 PVControl::PVControl(const PVControl& c) :
+  _index(c._index),
   _value(c._value)
 {
   strncpy(_name, c._name, NameSize);
@@ -20,6 +22,14 @@ PVControl::PVControl(const PVControl& c) :
 
 PVControl::~PVControl() {}
 
+bool PVControl::operator<(const PVControl& m) const
+{
+  int nt = strncmp(_name, m._name, NameSize);
+  return (nt<0) || (nt==0 && _index < m._index);
+}
+
 const char* PVControl::name() const { return _name; }
+
+unsigned PVControl::index() const { return _index; }
 
 double PVControl::value() const { return _value; }
