@@ -5,15 +5,19 @@ namespace Pds {
   enum {v_cntrl = 24, k_cntrl = 8};
   enum {m_ticks = ((1 << k_ticks)-1), s_ticks = (m_ticks << v_ticks)};
   enum {m_cntrl = ((1 << k_cntrl)-1), s_cntrl = (m_cntrl << v_cntrl)};
+  enum {v_fiduc =  0, k_fiduc = TimeStamp::NumFiducialBits};
+  enum {v_vecto = TimeStamp::NumFiducialBits, k_vecto = 32-TimeStamp::NumFiducialBits};
+  enum {m_fiduc = ((1 << k_fiduc)-1), s_fiduc = (m_fiduc <<v_fiduc)};
+  enum {m_vecto = ((1 << k_vecto)-1), s_vecto = (m_vecto <<v_vecto)};
 }
  
 Pds::TimeStamp::TimeStamp() :
-  _low(0),
+  _low (0),
   _high(0)
 {}
 
 Pds::TimeStamp::TimeStamp(const Pds::TimeStamp& input) :
-  _low(input._low),
+  _low (input._low ),
   _high(input._high)
 {}
 
@@ -22,19 +26,24 @@ Pds::TimeStamp::TimeStamp(const Pds::TimeStamp& input, unsigned control) :
   _high(input._high)
 {}
 
-Pds::TimeStamp::TimeStamp(unsigned low, unsigned high, unsigned control) :
-  _low((low & s_ticks) | ((control & m_cntrl) << v_cntrl)),
-  _high(high)
+// Pds::TimeStamp::TimeStamp(unsigned low, unsigned high) :
+//   _low ((low  & s_ticks)),
+//   _high(high)
+// {}
+
+Pds::TimeStamp::TimeStamp(unsigned low, unsigned high, unsigned vector, unsigned control) :
+  _low ((low  & s_ticks) | ((control & m_cntrl) << v_cntrl)),
+  _high((high & s_fiduc) | ((vector  & m_vecto) << v_vecto))
 {}
 
 unsigned Pds::TimeStamp::ticks() const
 {
-  return (_low & s_ticks) >> v_ticks;
+  return (_low  & s_ticks) >> v_ticks;
 }
 
 unsigned Pds::TimeStamp::fiducials() const
 {
-  return _high;
+  return (_high & s_fiduc) >> v_fiduc;
 }
 
 unsigned Pds::TimeStamp::control() const
@@ -42,9 +51,14 @@ unsigned Pds::TimeStamp::control() const
   return (_low & s_cntrl) >> v_cntrl;
 }
 
+unsigned Pds::TimeStamp::vector() const
+{
+  return (_high & s_vecto) >> v_vecto;
+}
+
 Pds::TimeStamp& Pds::TimeStamp::operator=(const Pds::TimeStamp& input)
 {
-  _low = input._low;
+  _low  = input._low ;
   _high = input._high;
   return *this;
 }
