@@ -1,3 +1,5 @@
+2009-Jul22	weaver	Tag V00-05-01.  Modified RunControl configuration data.
+					Added EVR vectoring field to TimeStamp.
 2009-Jul17	jackp			Added pnCCD support and made strings match enums
 2009-Jul16      cpo                     Put CAMP stuff in DetInfo enums.
 2009-Jul-14	weaver	Tag V00-05-00.	Added run control configuration classes.  Removed
